# the-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  penguin.Dockerfile
.github/workflows/: build.yml  release.yml  test.yml
src/: api_checker.rs  bot.rs  clipboard.rs  emoji_generator.rs  guysay.rs  health_checker.rs  jokes.rs  lib.rs  main.rs  quote_loader.rs
tests/: bot_tests.rs  guysay_tests.rs  health_checker_tests.rs  quote_loader_tests.rs
