[package]
name = "summoner-emoji-bot"
version = "0.1.0"
edition = "2024"
authors = ["Shawon Ashraf"]

[dependencies]
clipboard = "0.5.0"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serenity = { version = "0.12.4", features = ["framework", "standard_framework"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "1.0.69"

