[package]
name = "the-guy-bot"
version = "0.1.0"
edition = "2024"
authors = ["Shawon Ashraf"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[dependencies]
clipboard = "0.5.0"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serenity = { version = "0.12.4", features = ["framework", "standard_framework"]}
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"], default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.16"
rfortune = "0.3.0"
fcowsay = "2.0.0"

[dev-dependencies]
httpmock = "0.7.0"
mockito = "1.7.0"
serde_json = "1.0.142"

