[package]
name = "the-bot"
version = "0.1.0"
edition = "2024"
authors = ["Shawon Ashraf"]

[lib]
name = "the_bot"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serenity = { version = "0.12.4", features = ["framework", "standard_framework"]}
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"], default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.16"
rfortune = "0.3.0"
fcowsay = "2.0.0"

[dev-dependencies]
mockito = "1.7.0"
serde_json = "1.0.142"
rand = "0.9.2"

